--- a/basic-mathematics/pom.xml
+++ b/basic-mathematics/pom.xml
@@ -9,10 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>study_algorithm_data_structure</artifactId>
+    <artifactId>study-notes-basic-mathematics</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.wuxp.study</groupId>
+            <artifactId>study-notes-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
